# cpp-dev-template

./: .gitignore  CMakeLists.txt  README.md
ai_runtime/: __init__.py  app.py  config.py  paths.py  requirements.txt
ai_runtime/alignment/: __init__.py  base.py  heuristic_aligner.py  optional_forced_aligner.py  pinyin_viseme.py
ai_runtime/audio/: __init__.py  features.py  smoothing.py  wav_io.py
ai_runtime/face/: __init__.py  blink_generator.py  emotion_profiles.py  morph_map_loader.py  morph_timeline_generator.py  optional_lam_a2e_adapter.py  viseme_mapper.py
ai_runtime/playback/: __init__.py  tcp_jsonl_player.py
ai_runtime/protocol/: __init__.py  expression_frame_schema.py  jsonl_io.py  validator.py
ai_runtime/skeleton/: __init__.py  skeleton_semantic_analyzer.py  skeleton_semantic_map_writer.py  skeleton_tree_loader.py
ai_runtime/tts/: base.py  dryrun_tts.py  indextts_adapter.py  local_model_resolver.py  model_check.py  patch_indextts2_local_paths.py  remote_reference_scanner.py
configs/: ai_runtime.example.json  blendshape_map_yyb_miku.json  presets.json  sample_frame.json  sample_frame_invalid.json  skeleton_semantic_map_yyb_miku.example.json  skeleton_semantic_map_yyb_miku.json  skeleton_tree_BP_Miku_C_UAID_D85ED3D0834367D302_1401539439_miku_mesh.json
docs/: ai_morph_runtime.md  gui_dotnet.md  skeleton_tree_runtime.md  troubleshooting_indextts2_windows.md  ue_integration.md
gui_dotnet/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  VhSenderGui.csproj
include/vh/: frame_packet.h  (+6 more)
proto/: expression_frame.proto
scripts/: _env.ps1  analyze_skeleton_tree.ps1  build_gui_debug.ps1  clean_gui.ps1  create_indextts2_cpython_venv.ps1  download_indextts2_local_deps.ps1  patch_indextts2_local_paths.ps1  play_ai_morph_frames_tcp.ps1  repair_sentencepiece_env.ps1  run_ai_morph_tts.ps1  run_gui_debug.ps1  run_gui_release.ps1  run_presets.ps1  run_presets_file.ps1  run_presets_stdout.ps1  run_presets_tcp.ps1  run_sample_config.ps1  test_sentencepiece_tokenizer.ps1
src/: expression_mapper.cpp  json_protocol.cpp  main.cpp  packet_validator.cpp  sender_service.cpp  transport_client.cpp
tests/: test_ai_runtime_morph_map.py  test_ai_runtime_protocol.py  test_ai_runtime_skeleton_semantic.py  test_ai_runtime_skeleton_tree.py  test_ai_runtime_timeline.py  test_packet_validator.cpp
(+16 files in other folders)
